--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "src",
+    "paths": {
+      "@slices/*": ["redux/slices/*"],
+      "@store": ["redux/store"]
+    }
   },
   "include": [
     "src"
